--- a/book.html
+++ b/book.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Set your 💖</title>
+    <title> HEMU 💖</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -28,7 +28,7 @@
       <div class="page cover-front" onclick="movePage(this, 2)"></div>
       <div class="page text-page" onclick="movePage(this, 3)">
         <p>
-          hey didi i am ashish  🤞💖.
+          hey didi i am MY Brother  🤞💖.
         </p>
         <p>
           Having a sister like you is a blessing beyond words. You’ve been my protector, confidant, and best friend. On this Raksha Bandhan, I wish you all the happiness, love, and success that you so richly deserve. 
@@ -96,7 +96,7 @@
           I pray that our bond continues to grow stronger and that you are blessed with all the happiness in the world. Happy Raksha Bandhan!
         </p>
         
-        <p>You are My Everything, Didi 💖.</p>
+        <p>You are My Everything, Didu 💖.</p>
 
         <h2>Happiie Rakhii ~🏵️~</h2>
         <br />
