--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
       <div class="page cover-front" onclick="movePage(this, 2)"></div>
       <div class="page text-page" onclick="movePage(this, 3)">
         <p>
-          hey didi i am MY Brother  🤞💖.
+          hey didi i am YOUR Brother  🤞💖.
         </p>
         <p>
           Having a sister like you is a blessing beyond words. You’ve been my protector, confidant, and best friend. On this Raksha Bandhan, I wish you all the happiness, love, and success that you so richly deserve. 
