--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
         <h1>💖</h1>
         <img src="2.avif" alt="" style="width: 300px; aspect-ratio: auto 320 / 240; height: 240px; border-color: antiquewhite;">
         <div class="hat"><i class="fab fa-pied-piper-hat"></i></div>
-        <h2>codeash💖</h2>
+        <h2>MADE BY HEMU </h2>
       </div>
       <div class="page cover-front" onclick="movePage(this, 2)"></div>
       <div class="page text-page" onclick="movePage(this, 3)">
